infrastructure/vault/secret-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-remote-mock
  namespace: prof-test-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault-remote-mock
  template:
    metadata:
      labels:
        app: vault-remote-mock
    spec:
      containers:
      - name: server
        image: nginx:alpine
        ports:
        - containerPort: 80
        command: ["/bin/sh", "-c"]
        args:
          - |
            mkdir -p /usr/share/nginx/html/api/v1;
            echo '{"status": "active", "artifact_url": "https://storage.prof-stankin.ru/files/v1", "token": "mock-data-123"}' > /usr/share/nginx/html/secrets;
            nginx -g "daemon off;"
---
apiVersion: v1
kind: Service
metadata:
  name: vault-remote-service
  namespace: prof-test-apps
spec:
  selector:
    app: vault-remote-mock
  ports:
  - port: 80
    targetPort: 80
