infrastructure/vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-remote-ingress
  annotations:
    # Эта аннотация заставляет Traefik принимать путь корректно
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: test.prof-stankin.ru
    http:
      paths:
      - path: /secrets
        pathType: Prefix
        backend:
          service:
            name: vault-remote-service
            port:
              number: 80
